--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "homepage": "https://github.com/4GeeksAcademy/vanillajs-hello#readme",
   "dependencies": {
     "@popperjs/core": "^2.10.1",
+    "ajv-keywords": "^5.1.0",
     "bootstrap": "^5.1.1"
   },
   "devDependencies": {
